--- a/master peice/signUp/signUp.html
+++ b/master peice/signUp/signUp.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 
-    <title>Document</title>
+    <title>Signup</title>
+    <link rel="icon" href="../img/logo/favicon (3).ico">
     <link rel="stylesheet" href="signup.css">
 </head>
 
