--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <link rel="icon" href="../img/logo/favicon (3).ico">
     <link rel="stylesheet" href="Aboutus.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 </head>
@@ -17,17 +18,17 @@
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li class="active"><a href="../About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
+                <li class="active"><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -54,12 +55,12 @@
                 meticulously maintained for your comfort and safety. Experience the freedom of choice and quality
                 service at Lynex Rides, where every journey is tailored to your preferences. Your adventure starts here!
             </p>
-            <a href="../Contact Us/Contactus.html"><button class="viewBtn">contact us </button></a>
+            <a href="contact.html"><button class="viewBtn">contact us </button></a>
         </div>
-        <div><img src="../img/logo/lynx22-removebg-preview.png" alt=""></div>
+        <div><img src="/img/logo/lynx22-removebg-preview.png" alt=""></div>
     </section>
     <section id="about-head" class="section-p1">
-        <img src="../img/arrivals/10.png" alt="">
+        <img src="/img/arrivals/10.png" alt="">
         <div>
             <h2>Why Lynx Rides?</h2>
             <p class="why">
@@ -74,21 +75,21 @@
         <h2 style="margin-bottom: 7%;">Client Testimonial</h2>
         <div class="testimonial-container">
             <div class="testimonial">
-                <img src="../img/client/05.jpg" alt="Client 1">
+                <img src="/img/client/05.jpg" alt="Client 1">
                 <h3>John Doe</h3>
                 <p>"Lynex Rides transformed my road trip with the perfect blend of freedom and a diverse,
                     well-maintained fleet!"</p>
             </div>
 
             <div class="testimonial">
-                <img src="../img/client/02.jpg" alt="Client 2">
+                <img src="/img/client/02.jpg" alt="Client 2">
                 <h3>Jane Smith</h3>
                 <p>"For business travel, Lynex Rides is my top choice professional chauffeurs and a quality fleet ensure
                     a seamless journey."</p>
             </div>
 
             <div class="testimonial">
-                <img src="../img/client/04.jpg" alt="Client 3">
+                <img src="/img/client/04.jpg" alt="Client 3">
                 <h3>Alice Johnson</h3>
                 <p>"Our family vacation became stress-free and memorable, thanks to Lynex Rides' comfortable vehicles
                     and expert chauffeurs."</p>
@@ -103,8 +104,8 @@
         </h3>
         <p>Ready to Roll? Dive into the Lynex Rides Experience - Rent Now and Drive or Relax with Ease!</p>
         <div>
-            <a href="../shop/shop.html"><button class="viewBtn">Rent Car</button></a>
-            <a href="../CarWdriver/CarWdriver.html"><button class="viewBt">With Driver!</button></a>
+            <a href="/shop/shop.html"><button class="viewBtn">Rent Car</button></a>
+            <a href="/CarWdriver/CarWdriver.html"><button class="viewBt">With Driver!</button></a>
         </div>
     </section>
 
@@ -141,9 +142,10 @@
             </div>
             <div class="footer-col">
                 <h5>Newsletter</h5>
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-                <input type="text" placeholder="your Email">
-                <button>Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
+                <p class="text">Stay ahead of the curve! ️ Subscribe and we'll keep you updated on the latest car trends.</p>           
+                <div id="err"></div>
+                <input type="text" id="subscribe" placeholder="your Email">
+                <button id="subscribeBtn">Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
             </div>
         </div>
     </section>
@@ -157,7 +159,7 @@
         </div>
     </div>
     <script src="about.js"></script>
-    <script src="../Rolecheck.js"></script>
+    <script src="/Rolecheck.js"></script>
 </body>
 
 </html>
