--- a/master peice/Renter/renter.html
+++ b/master peice/Renter/renter.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renter</title>
+    <title>Landloard</title>
+    <link rel="icon" href="../img/logo/favicon (3).ico">
     <link rel="stylesheet" href="renter.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 </head>
@@ -14,13 +15,13 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-           <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
+           <a href="/index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
                 <li class="active"><a href="renter.html">Dashboard</a></li>
-                <li><a href="../About us/Aboutus.html">About us</a></li>
-                <li><a href="../Contact Us/Contactus.html">Contact us</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li><a href="/Contact Us/Contactus.html">Contact us</a></li>
                 <li id="addBtn"><a href="/profile/profile.html">Profile</a></li>
                 <li><a href="#" onclick="logout()">Logout</a></li>
             </ul>
@@ -74,8 +75,9 @@
             <select id="brands" name="BrandName">
             <option value="">Choose</option>    
             </select>
-
-            
+                
+            <label for="cost">Model:</label>
+            <input type="text" id="model" placeholder="Model...">
 
             <label for="transmission">Transmission:</label>
             <select id="transmission" name="transmission" required>
@@ -140,9 +142,9 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
-                    ducimus quasi mollitia minima harum!</p>
+                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
+                    enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
                 <span><i class="fa-solid fa-location-dot"></i>123D al-Salt, Jordan</span>
                 <span><i class="fa-regular fa-envelope"></i>info@gmail.com</span>
@@ -167,9 +169,10 @@
             </div>
             <div class="footer-col">
                 <h5>Newsletter</h5>
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-                <input type="text" placeholder="your Email">
-                <button>Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
+                <p class="text">Stay ahead of the curve! ️ Subscribe and we'll keep you updated on the latest car trends.</p>              
+                <div id="err"></div>
+                <input type="text" id="subscribe" placeholder="your Email">
+                <button id="subscribeBtn">Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
             </div>
         </div>
     </section>
