--- a/master peice/admin2/admin/categorey/create.html
+++ b/master peice/admin2/admin/categorey/create.html
@@ -19,13 +19,15 @@
     <!-- Admin Styling -->
     <link rel="stylesheet" href="../../css/admin.css">
 
-    <title>Admin Section - Add Topic</title>
+    <title>Admin Section - Add Brand</title>
+    <link rel="icon" href="../../../img/logo/favicon (3).ico">
+
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -53,7 +55,7 @@
                 <li><a href="../product/index.html">Manage Orders </a></li>
                 <li><a href="../users/index.html">Manage Users</a></li>
                 <li><a href="../categorey/index.html">Manage Category</a></li>
-                <li><a href="../Salls/index.html">Manage Salls </a></li>
+                <li><a href="../Salls/index.html">Manage Sales </a></li>
             </ul>
         </div>
         <!-- // Left Sidebar -->
@@ -96,23 +98,6 @@
     <script src="https://cdn.ckeditor.com/ckeditor5/12.2.0/classic/ckeditor.js"></script>
     <!-- Custom Script -->
     <script src="Brands.js"></script>
-    <script>
-        // const isLoggedIn = sessionStorage.getItem('isLoggedin');
-        // let Logout = document.getElementById('Logout');
-        // if (isLoggedIn === 'true') {
-        //     // Change text and behavior for logged-in users
-        //     Logout.textContent = 'Log out';
-
-        //     Logout.addEventListener('click', (e) => {
-        //         // Log out logic
-        //         window.location.href = '/index.html';
-        //         sessionStorage.clear();
-        //     });
-        // } else {
-        //     window.location.href = '/login/login.html';
-        // }
-    </script>
-
 </body>
 
 </html>
