--- a/master peice/admin2/admin/categorey/edit1.html
+++ b/master peice/admin2/admin/categorey/edit1.html
@@ -21,13 +21,14 @@
     <!-- Admin Styling -->
     <link rel="stylesheet" href="../../css/admin.css">
 
-    <title>Admin Section - Manage Topics</title>
+    <title>Admin Section - Manage Location</title>
+    <link rel="icon" href="../../../img/logo/favicon (3).ico">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -55,7 +56,7 @@
                 <li><a href="../product/index.html">Manage Orders </a></li>
                 <li><a href="../users/index.html">Manage Users</a></li>
                 <li><a href="../categorey/index.html">Manage Category</a></li>
-                <li><a href="../Salls/index.html">Manage Salls </a></li>
+                <li><a href="../Salls/index.html">Manage Sales </a></li>
 
             </ul>
         </div>
@@ -98,23 +99,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Custom Script -->
     <script src="Location.js"></script>
-    <script>
-        // const isLoggedIn = sessionStorage.getItem('isLoggedin');
-        // let Logout = document.getElementById('Logout');
-        // if (isLoggedIn === 'true') {
-        //     // Change text and behavior for logged-in users
-        //     Logout.textContent = 'Log out';
-
-        //     Logout.addEventListener('click', (e) => {
-        //         // Log out logic
-        //         window.location.href = '/index.html';
-        //         sessionStorage.clear();
-        //     });
-        // } else {
-        //     window.location.href = '/login/login.html';
-        // }
-    </script>
-
 </body>
 
 </html>
