--- a/master peice/admin2/admin/product/create.html
+++ b/master peice/admin2/admin/product/create.html
@@ -20,13 +20,14 @@
     <!-- Admin Styling -->
     <link rel="stylesheet" href="../../css/admin.css">
 
-    <title>Admin Section - Manage Posts</title>
+    <title>Admin Section - Accepted Orders</title>
+    <link rel="icon" href="../../../img/logo/favicon (3).ico">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -54,7 +55,7 @@
                 <li><a href="../product/index.html">Manage Orders </a></li>
                 <li><a href="../users/index.html">Manage Users</a></li>
                 <li><a href="../categorey/index.html">Manage Category</a></li>
-                <li><a href="../Salls/index.html">Manage Salls </a></li>
+                <li><a href="../Salls/index.html">Manage Sales </a></li>
 
 
             </ul>
