--- a/master peice/admin2/admin/users/edit4.html
+++ b/master peice/admin2/admin/users/edit4.html
@@ -20,12 +20,13 @@
     <link rel="stylesheet" href="../../css/admin.css">
 
     <title>Admin Section - Add User</title>
+    <link rel="icon" href="../../../img/logo/favicon (3).ico">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -53,7 +54,7 @@
                 <li><a href="../product/index.html">Manage Orders </a></li>
                 <li><a href="../users/index.html">Manage Users</a></li>
                 <li><a href="../categorey/index.html">Manage Category</a></li>
-                <li><a href="../Salls/index.html">Manage Salls </a></li>
+                <li><a href="../Salls/index.html">Manage Sales </a></li>
             </ul>
         </div>
         <!-- // Left Sidebar -->
@@ -87,7 +88,7 @@
                         <input type="email" name="email" id="email" class="text-input">
                     </div>
                     <div>
-                       <a href="../admin2/admin/users/index.html"> <button type="submit" class="btn btn-big">Update</button></a>
+                       <a href="/admin2/admin/users/index.html"> <button type="submit" class="btn btn-big">Update</button></a>
                     </div>
                 </form>
 
