--- a/master peice/profile/Orders/orders.html
+++ b/master peice/profile/Orders/orders.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <link rel="icon" href="../../img/logo/favicon (3).ico">
     <link rel="stylesheet" href="orders.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 </head>
@@ -54,7 +55,7 @@
         <section class="footer">
             <div class="footer-row">
                 <div class="footer-col">
-                    <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                    <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
                         ducimus quasi mollitia minima harum!</p>
                     <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
@@ -81,9 +82,10 @@
                 </div>
                 <div class="footer-col">
                     <h5>Newsletter</h5>
-                    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-                    <input type="text" placeholder="your Email">
-                    <button>Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
+                    <p class="text">Stay ahead of the curve! ️ Subscribe and we'll keep you updated on the latest car trends.</p>                
+                    <div id="err"></div>
+                    <input type="text" id="subscribe" placeholder="your Email">
+                    <button id="subscribeBtn">Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
                 </div>
             </div>
         </section>
