--- a/master peice/profile/edit.html
+++ b/master peice/profile/edit.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Profile</title>
+  <link rel="icon" href="../img/logo/favicon (3).ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="edit.css">
   <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
@@ -51,15 +52,15 @@
             <div class="tab-content">
               <div class="tab-pane fade active show" id="account-general">
                 <div class="card-body media align-items-center">
-                  <img src="../img/team/t-2.jpg" alt class="d-block ui-w-80" id="userImage" />
+                  <img src="../img/team/profile1.png" alt  id="userImage" />
                   <div class="media-body ml-4">
-                    <label class="btn btn-outline-primary">
-                      <input type="file" class="account-settings-fileinput" />
+
+                    <label class="btn btn-outline-danger">
+                      <input type="file" id="imgg" class="account-settings-fileinput" />
+                      Edit
+                      &nbsp;
                     </label>
-                    &nbsp;
-                    <button type="button" class="btn btn-default md-btn-flat">
-                      Reset
-                    </button>
+
 
                   </div>
                 </div>
@@ -81,12 +82,18 @@
                   </div>
 
                   <div class="form-group">
+                    <label class="form-label">Old Password</label>
+                    <input type="password" class="form-control" placeholder="*******" id="OldPassword"/>
+                  </div>
+
+                  <div class="form-group">
                     <label class="form-label">New password</label>
-                    <input type="password" class="form-control" value="******" id="passwordInput" />
+                    <input type="password" class="form-control" placeholder="*******" id="passwordInput"/>
                   </div>
                 </div>
 
                 <div class="text-right mt-3 mb-3">
+                  <div id="Validerror"></div>
                   <button id="updateBtn" type="button" class="btn btn-danger">Save changes</button>&nbsp;
                   <a href="./profile.html"><button type="button" class="btn btn-default mr-4">Cancel</button></a>
                 </div>
@@ -125,9 +132,10 @@
       </div>
       <div class="footer-col">
         <h5>Newsletter</h5>
-        <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-        <input type="text" placeholder="your Email">
-        <button>Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
+        <p class="text">Stay ahead of the curve! ️ Subscribe and we'll keep you updated on the latest car trends.</p>       
+        <div id="err"></div>
+        <input type="text" id="subscribe" placeholder="your Email">
+        <button id="subscribeBtn">Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
       </div>
     </div>
   </section>
