--- a/master peice/profile/profile.html
+++ b/master peice/profile/profile.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <link rel="icon" href="../img/logo/favicon (3).ico">
     <link rel="stylesheet" href="profile.css">
     <script src="https://kit.fontawesome.com/62ed9ebe37.js" crossorigin="anonymous"></script>
 </head>
@@ -13,21 +14,21 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="../About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -38,12 +39,12 @@
     <!-- profile section start -->
     <div class="profile-container">
         <div class="profile-picture">
-            <img id="profileImage" src="../img/team/t-2.jpg" alt="User Profile Picture" />
+            <img id="profileImage" src="../img/team/profile1.png" alt="User Profile Picture" />
         </div>
         <div class="profile-info">
             <p name="type" id="UserType"><strong>Type:</strong>Renter</p>
-            <p name="username" id="username"><strong>Username:</strong> Muneer ahmad</p>
-            <p name="phoneNumber" id="phoneNumber"><strong>phoneNumber:</strong>0798741235</p>
+            <p name="username" id="username"><strong>Username:</strong>Login</p>
+            <p name="phoneNumber" id="phoneNumber"><strong>phoneNumber:</strong>00000</p>
             <p name="email" id="email"><strong>Email:</strong> Muneer@example.com</p>
             <p name="password" id="password"><strong>password:</strong>******</p>
         </div>
@@ -64,7 +65,7 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                 <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
                     enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
@@ -91,9 +92,10 @@
             </div>
             <div class="footer-col">
                 <h5>Newsletter</h5>
-                <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-                <input type="text" placeholder="your Email">
-                <button>Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
+                <p class="text">Stay ahead of the curve! ️ Subscribe and we'll keep you updated on the latest car trends.</p>         
+                <div id="err"></div>
+                <input type="text" id="subscribe" placeholder="your Email">
+                <button id="subscribeBtn">Subscribe Now<i class="fa-solid fa-paper-plane"></i></button>
             </div>
         </div>
     </section>
@@ -106,7 +108,7 @@
             <i class="fa-brands fa-youtube"></i>
         </div>
     </div>
-    <script src="../Rolecheck.js"></script>
+    <script src="/Rolecheck.js"></script>
     <script src="profile.js"></script>
 </body>
 
