--- a/master peice/Contact Us/Contactus.html
+++ b/master peice/Contact Us/Contactus.html
@@ -18,17 +18,17 @@
     </div>
     <nav>
       <ul id="nav1">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/shop/shop.html">Book Now</a>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../shop/shop.html">Book Now</a>
           <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
           <ul class="drop-down">
-            <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
+            <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
           </ul>
         </li>
-        <li><a href="/About us/Aboutus.html">About us</a></li>
-        <li class="active" id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
-        <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
-        <li id="loginbtn"><a href="/login/login.html">Login</a></li>
+        <li><a href="../About us/Aboutus.html">About us</a></li>
+        <li class="active" id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
+        <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
+        <li id="loginbtn"><a href="../login/login.html">Login</a></li>
       </ul>
 
     </nav>
@@ -124,7 +124,7 @@
   <section class="footer">
     <div class="footer-row">
       <div class="footer-col">
-        <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+        <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
         <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur – enjoy the
           journey, stress-free.</p>
         <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
@@ -168,7 +168,7 @@
     </div>
   </div>
   <script src="contact.js"></script>
-  <script src="/Rolecheck.js"></script>
+  <script src="../Rolecheck.js"></script>
 </body>
 
 </html>
