--- a/master peice/Renter/renter.html
+++ b/master peice/Renter/renter.html
@@ -15,14 +15,14 @@
     <!-- nav bar-section -->
     <header class="header">
         <div class="logo">
-           <a href="/index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
+           <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
                 <li class="active"><a href="renter.html">Dashboard</a></li>
-                <li><a href="/About us/Aboutus.html">About us</a></li>
-                <li><a href="/Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="/profile/profile.html">Profile</a></li>
+                <li><a href="../About us/Aboutus.html">About us</a></li>
+                <li><a href="../Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="../profile/profile.html">Profile</a></li>
                 <li><a href="#" onclick="logout()">Logout</a></li>
             </ul>
 
@@ -142,7 +142,7 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                 <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
                     enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
