--- a/master peice/admin2/admin/Salls/index.html
+++ b/master peice/admin2/admin/Salls/index.html
@@ -32,14 +32,15 @@
     <body>
         <header>
             <div class="logo">
-               <a href="/index.html"> <h1 class="logo-text"><span>Lynx</span>Rides</h1></a>
+                <a href="../../../index.html">
+                    <h1 class="logo-text"><span>Lynx</span>Rides</h1></a>
             </div>
             <i class="fa fa-bars menu-toggle"></i>
             <ul class="nav">
                 <li>
                     <a href="#">
                         <i class="fa fa-user"></i>
-                        Admin
+                        ADMIN
                         <i class="fa fa-chevron-down" style="font-size: .8em;"></i>
                     </a>
                     <ul>
