--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -18,17 +18,17 @@
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li class="active"><a href="../About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
+                <li class="active"><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -57,10 +57,10 @@
             </p>
             <a href="contact.html"><button class="viewBtn">contact us </button></a>
         </div>
-        <div><img src="../img/logo/lynx22-removebg-preview.png" alt=""></div>
+        <div><img src="/img/logo/lynx22-removebg-preview.png" alt=""></div>
     </section>
     <section id="about-head" class="section-p1">
-        <img src="../img/arrivals/10.png" alt="">
+        <img src="/img/arrivals/10.png" alt="">
         <div>
             <h2>Why Lynx Rides?</h2>
             <p class="why">
@@ -75,21 +75,21 @@
         <h2 style="margin-bottom: 7%;">Client Testimonial</h2>
         <div class="testimonial-container">
             <div class="testimonial">
-                <img src="../img/client/05.jpg" alt="Client 1">
+                <img src="/img/client/05.jpg" alt="Client 1">
                 <h3>John Doe</h3>
                 <p>"Lynex Rides transformed my road trip with the perfect blend of freedom and a diverse,
                     well-maintained fleet!"</p>
             </div>
 
             <div class="testimonial">
-                <img src="../img/client/02.jpg" alt="Client 2">
+                <img src="/img/client/02.jpg" alt="Client 2">
                 <h3>Jane Smith</h3>
                 <p>"For business travel, Lynex Rides is my top choice professional chauffeurs and a quality fleet ensure
                     a seamless journey."</p>
             </div>
 
             <div class="testimonial">
-                <img src="../img/client/04.jpg" alt="Client 3">
+                <img src="/img/client/04.jpg" alt="Client 3">
                 <h3>Alice Johnson</h3>
                 <p>"Our family vacation became stress-free and memorable, thanks to Lynex Rides' comfortable vehicles
                     and expert chauffeurs."</p>
@@ -104,8 +104,8 @@
         </h3>
         <p>Ready to Roll? Dive into the Lynex Rides Experience - Rent Now and Drive or Relax with Ease!</p>
         <div>
-            <a href="../shop/shop.html"><button class="viewBtn">Rent Car</button></a>
-            <a href="../CarWdriver/CarWdriver.html"><button class="viewBt">With Driver!</button></a>
+            <a href="/shop/shop.html"><button class="viewBtn">Rent Car</button></a>
+            <a href="/CarWdriver/CarWdriver.html"><button class="viewBt">With Driver!</button></a>
         </div>
     </section>
 
@@ -159,7 +159,7 @@
         </div>
     </div>
     <script src="about.js"></script>
-    <script src="../Rolecheck.js"></script>
+    <script src="/Rolecheck.js"></script>
 </body>
 
 </html>
