--- a/master peice/admin2/admin/Salls/index.html
+++ b/master peice/admin2/admin/Salls/index.html
@@ -32,8 +32,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="../../../index.html">
-                    <h1 class="logo-text"><span>Lynx</span>Rides</h1></a>
+               <a href="/index.html"> <h1 class="logo-text"><span>Lynx</span>Rides</h1></a>
             </div>
             <i class="fa fa-bars menu-toggle"></i>
             <ul class="nav">
