--- a/master peice/admin2/admin/categorey/create.html
+++ b/master peice/admin2/admin/categorey/create.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -76,6 +76,7 @@
                     <div>
                         <label for="Brand">Brand Name</label>
                         <input type="text" name="Brand" id="Brand" class="text-input">
+                        <div id="err"></div>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-big">Create Brand</button>
