--- a/master peice/admin2/admin/categorey/createL.html
+++ b/master peice/admin2/admin/categorey/createL.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
@@ -75,6 +75,7 @@
                     <div>
                         <label for="Brand">City Name</label>
                         <input type="text" name="Brand" id="Brand" class="text-input">
+                        <div id="err"></div>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-big">Add Location</button>
