--- a/master peice/admin2/admin/product/index.html
+++ b/master peice/admin2/admin/product/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../../../index.html">
+            <a href="/index.html">
                 <h1 class="logo-text"><span>Lynx</span>Rides</h1>
             </a>
         </div>
