--- a/master peice/profile/Orders/orders.html
+++ b/master peice/profile/Orders/orders.html
@@ -14,21 +14,21 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="../index.html">Home</a></li>
-                <li class="active"><a href="../shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li class="active"><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="../About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -49,13 +49,13 @@
         </div>
     </div>
 
-          <a href="../profile/OrdersRenter/OrdersRenter.html"></a>
+          <a href="/profile/OrdersRenter/OrdersRenter.html"></a>
         <!-- end orders -->
         <!-- footer section start -->
         <section class="footer">
             <div class="footer-row">
                 <div class="footer-col">
-                    <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                    <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                     <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse excepturi
                         ducimus quasi mollitia minima harum!</p>
                     <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
@@ -98,7 +98,7 @@
                 <i class="fa-brands fa-youtube"></i>
             </div>
         </div>
-        <script src="../Rolecheck.js"></script>
+        <script src="/Rolecheck.js"></script>
         <script src="orders.js"></script>
 </body>
 
