--- a/master peice/profile/profile.html
+++ b/master peice/profile/profile.html
@@ -14,21 +14,21 @@
     <!-- header section start -->
     <header class="header">
         <div class="logo">
-            <a href="../index.html"><img src="../img/logo/lynx22-removebg-preview.png" alt=""></a>
+            <a href="/index.html"><img src="/img/logo/lynx22-removebg-preview.png" alt=""></a>
         </div>
         <nav>
             <ul id="nav1">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../shop/shop.html">Book Now</a>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/shop/shop.html">Book Now</a>
                     <i class="fa-solid fa-chevron-down" style="color: #000000; font-size: 0.7rem;"></i>
                     <ul class="drop-down">
-                        <span><a href="../CarWdriver/CarWdriver.html">Car with Driver</a></span>
+                        <span><a href="/CarWdriver/CarWdriver.html">Car with Driver</a></span>
                     </ul>
                 </li>
-                <li><a href="../About us/Aboutus.html">About us</a></li>
-                <li id="contact"><a href="../Contact Us/Contactus.html">Contact us</a></li>
-                <li id="addBtn"><a href="../signUp/signUp.html">Sign Up</a></li>
-                <li id="loginbtn"><a href="../login/login.html">Login</a></li>
+                <li><a href="/About us/Aboutus.html">About us</a></li>
+                <li id="contact"><a href="/Contact Us/Contactus.html">Contact us</a></li>
+                <li id="addBtn"><a href="/signUp/signUp.html">Sign Up</a></li>
+                <li id="loginbtn"><a href="/login/login.html">Login</a></li>
             </ul>
 
         </nav>
@@ -65,7 +65,7 @@
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
-                <img src="../img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
+                <img src="/img/logo/wGkC8OxwRAvAAAAAElFTkSuQmCC.png" alt="">
                 <p class="text">Seamless rentals, your way. Rent a car or elevate your experience with a chauffeur –
                     enjoy the journey, stress-free.</p>
                 <span><i class="fa-solid fa-phone"></i>+962 78 967 1075</span>
@@ -108,7 +108,7 @@
             <i class="fa-brands fa-youtube"></i>
         </div>
     </div>
-    <script src="../Rolecheck.js"></script>
+    <script src="/Rolecheck.js"></script>
     <script src="profile.js"></script>
 </body>
 
