--- a/master peice/About us/Aboutus.html
+++ b/master peice/About us/Aboutus.html
@@ -55,7 +55,7 @@
                 meticulously maintained for your comfort and safety. Experience the freedom of choice and quality
                 service at Lynex Rides, where every journey is tailored to your preferences. Your adventure starts here!
             </p>
-            <a href="contact.html"><button class="viewBtn">contact us </button></a>
+            <a href="/Contact Us/Contactus.html"><button class="viewBtn">contact us </button></a>
         </div>
         <div><img src="/img/logo/lynx22-removebg-preview.png" alt=""></div>
     </section>
